# micasa

./: .codeclimate.yml  .editorconfig  .gitignore  .travis.yml  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  micasa.sh
lib/hkdf/: sha.h
lib/mongoose/: mongoose.c  mongoose.h
lib/poly1305/: poly1305.h
lib/v7/: v7.c
src/: Arguments.cpp  Arguments.h  Controller.cpp  Controller.h  Curl.cpp  Curl.h  Database.cpp  Database.h  Device.cpp  Device.h  Device2.cpp  Device2.h  Event.h  Hardware.cpp  Hardware.h  Logger.cpp  Logger.h  Network.cpp  Network.h  Plugin.cpp  Plugin.h  Scheduler.cpp  Scheduler.h  Serial.cpp  Serial.h  Settings.cpp  Settings.h  Structs.h  User.cpp  User.h  Utils.cpp  Utils.h  WebServer.cpp  WebServer.h  Worker.cpp  Worker.h  micasa.cpp
src/device/: Counter.cpp  Counter.h  Level.cpp  Level.h  Switch.cpp  Switch.h  Text.cpp  Text.h
src/hardware/: Domoticz.cpp  Domoticz.h  Dummy.cpp  Dummy.h  HarmonyHub.cpp  HarmonyHub.h  Internal.cpp  Internal.h  OpenZWave.cpp  OpenZWave.h  OpenZWaveNode.cpp  OpenZWaveNode.h  P1Meter.cpp  P1Meter.h  PiFace.cpp  PiFace.h  PiFaceBoard.cpp  PiFaceBoard.h  RFXCom.cpp  RFXCom.h  SolarEdge.cpp  SolarEdge.h  SolarEdgeInverter.cpp  SolarEdgeInverter.h  Sunriset.cpp  Sunriset.h  Telegram.cpp  Telegram.h  WeatherUnderground.cpp  WeatherUnderground.h  ZWave.cpp  ZWave.h  ZWaveNode.cpp  ZWaveNode.h
src/hardware/ZWave/: CommandClasses.h
src/plugins/: Debug.cpp  Debug.h  Dummy.cpp  Dummy.h  HarmonyHub.cpp  HarmonyHub.h  HomeKit.cpp  HomeKit.h  PiFace.cpp  PiFace.h  PiFaceBoard.cpp  PiFaceBoard.h  RFXCom.cpp  RFXCom.h  SolarEdge.cpp  SolarEdge.h  SolarEdgeInverter.cpp  SolarEdgeInverter.h  System.cpp  System.h  Telegram.cpp  Telegram.h  WeatherUnderground.cpp  WeatherUnderground.h  ZWave.cpp  ZWave.h  ZWaveNode.cpp  ZWaveNode.h
src/plugins/HomeKit/: Manager.cpp  Manager.h
src/plugins/HomeKit/chacha20/: LICENSE  chacha20_simple.c  chacha20_simple.h
src/plugins/HomeKit/curve25519/: LICENSE  curve25519-donna.c  curve25519-donna.h
src/plugins/HomeKit/ed25519/: ed25519-donna.c  ed25519-donna.h  ed25519-hash.h  ed25519.c  ed25519.h  modm-donna-32bit.h
src/plugins/HomeKit/hkdf/: hkdf.c  hkdf.h  sha.c
src/plugins/HomeKit/poly1305/: LICENSE  poly1305.c  poly1305.h
src/plugins/HomeKit/srp/: LICENSE  cstr.c  cstr.h  srp.c  srp.h  srp6_server.c  srp_aux.h  t_conv.c  t_math.c  t_misc.c  t_read.c  t_read.h  t_sha.h  t_truerand.c
src/plugins/HomeKit/tlv8/: LICENSE  tlv8.cpp  tlv8.h
src/plugins/PiFace/: MCP23x17.h
src/plugins/ZWave/: CommandClasses.h
var/scripts/: .gitignore  demo.js
www/: .gitignore  dev.html  index.appcache  index.html  package.json  prod.html  systemjs.config.js  tsconfig.json
www/css/: .gitignore  app.css  login.css  micasa.css  script-edit.css
www/src/: app.component.ts  app.module.ts  app.service.ts  device.service.ts  devices.component.ts  hardware.component.ts  hardware.service.ts  header.component.ts  help.component.ts  login.component.ts  login.service.ts  main.ts  menu.component.ts  routing.module.ts  screen.component.ts  screen.service.ts  script.service.ts  scripts.component.ts  setup.component.ts  timer.service.ts  timers.component.ts  user.service.ts  users.component.ts
www/src/devices/: data.resolver.ts  details.component.ts  device.resolver.ts  devices.module.ts  devices.service.ts  edit.component.ts  list.component.ts  list.resolver.ts  routing.module.ts
www/src/devices/links/: edit.component.ts  link.resolver.ts  list.component.ts  list.resolver.ts
www/src/grid/: column.component.ts  grid.directive.ts  grid.module.ts  paging.component.ts  search.component.ts
www/src/hardware/: details.component.ts  edit.component.ts  hardware.module.ts  hardware.resolver.ts  hardware.service.ts  list.component.ts  list.resolver.ts  routing.module.ts
www/src/links/: edit.component.ts  link.resolver.ts  links.module.ts  links.service.ts  list.component.ts  list.resolver.ts  routing.module.ts
www/src/plugins/: edit.component.ts  list.component.ts  list.resolver.ts  plugin.resolver.ts  plugins.module.ts  plugins.service.ts  routing.module.ts
www/src/screens/: edit.component.ts  list.resolver.ts  routing.module.ts  screen.component.ts  screen.resolver.ts  screens.module.ts  screens.service.ts  widget.component.ts
www/src/screens/widgets/: chart.component.ts  counter.component.ts  gauge.component.ts  latest.component.ts  (+5 more)
www/src/scripts/: details.component.ts  edit.component.ts  list.component.ts  list.resolver.ts  routing.module.ts  script.resolver.ts  scripts.module.ts  scripts.service.ts
www/src/session/: error.component.ts  error.resolver.ts  login.component.ts  routing.module.ts  session.guard.ts  session.module.ts  session.service.ts
www/src/settings/: register.directive.ts  settings.component.ts  settings.module.ts  settings.service.ts
www/src/timers/: details.component.ts  edit.component.ts  list.component.ts  list.resolver.ts  routing.module.ts  timer.resolver.ts  timers.module.ts  timers.service.ts
www/src/users/: details.component.ts  edit.component.ts  list.component.ts  list.resolver.ts  login.component.ts  routing.module.ts  user.resolver.ts  users.module.ts  users.service.ts
www/src/utils/: sort.pipe.ts  timestamp.pipe.ts  truncate.pipe.ts  utils.module.ts
www/src/widgets/: counter.component.ts  level.component.ts  switch.component.ts  text.component.ts  widgets.module.ts
www/tpl/: app.html  device-details.html  device-edit.html  devices-list.html  devices.html  error.html  hardware-details.html  hardware-edit.html  hardware-list.html  hardware.html  header.html  help.html  link-edit.html  links-list.html  login.html  menu.html  plugin-edit.html  plugins-list.html  screen-edit.html  screen.html  script-details.html  script-edit.html  scripts-list.html  scripts.html  settings.html  setup.html  timer-details.html  timer-edit.html  timers-list.html  timers.html  user-details.html  user-edit.html  users-list.html  users.html  widget.html
www/tpl/widgets/: chart.html  counter.html  gauge.html  latest.html  level.html  slider.html  switch.html  table.html  text.html
